--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4.23"
-eframe = "0.20.1"
+chrono = { version = "0.4.23", features = ["serde"] }
+eframe = { version = "0.20.1", features = ["persistence"] }
+serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.91"
+uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
 
-[dependencies.uuid]
-version = "1.3.0"
-features = ["v4", "fast-rng", "macro-diagnostics"]
