--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = { version = "0.4.23", features = ["serde"] }
 eframe = { version = "0.20.1", features = ["persistence"] }
+notify-rust = "4.7.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
 uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
